--- a/pembayaran.html
+++ b/pembayaran.html
@@ -182,7 +182,7 @@
             if (metode) metode.style.display = "none";
             if (bayarBtn) {
               bayarBtn.disabled = true;
-              bayarBtn.innerText = "Login terlebih dahulu";
+              bayarBtn.innerHTML = '<a href="login.html" class="text-white text-decoration-none">Login terlebih dahulu</a>';
               bayarBtn.classList.add("btn-secondary");
               bayarBtn.classList.remove("btn-success");
             }
