--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JasaProfesional</title>
+    <title>JaProf</title>
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -41,7 +41,7 @@
         <div class="row align-items-center">
             <div class="col-lg-7 mb-4 mb-lg-0">
                 <h1 class="display-4 fw-bold">Solusi Desain Profesional untuk Bisnis Anda</h1>
-                <p class="lead">Bangun identitas brand yang kuat dan tampil menonjol di pasar bersama JasaProfesional.</p>
+                <p class="lead">Bangun identitas brand yang kuat dan tampil menonjol di pasar bersama JaProf.</p>
                
             </div>
             <div class="col-lg-5 text-center">
@@ -361,7 +361,7 @@
 <!-- FOOTER -->
     <footer class="bg-dark text-light py-4">
         <div class="container text-center">
-            <div class="fw-bold fs-5 mb-1">Jasa Profesional</div>
+            <div class="fw-bold fs-5 mb-1">JaProf</div>
             <div class="mb-3">
                 Solusi desain & komunikasi profesional untuk UMKM & bisnis berkembang.
             </div>
