--- a/tentang.html
+++ b/tentang.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Tentang Kami - JasaProfesional</title>
+    <title>Tentang Kami - JaProf</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css" />
@@ -109,7 +109,7 @@
     <!-- FOOTER -->
     <footer class="bg-dark text-light py-4">
         <div class="container text-center">
-            <div class="fw-bold fs-5 mb-1">Jasa Profesional</div>
+            <div class="fw-bold fs-5 mb-1">JaProf</div>
             <div class="mb-3">
                 Solusi desain & komunikasi profesional untuk UMKM & bisnis berkembang.
             </div>
