--- a/layanan.html
+++ b/layanan.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Layanan - JasaProfesional</title>
+  <title>Layanan - JaProf</title>
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -87,7 +87,7 @@
 <!-- FOOTER -->
     <footer class="bg-dark text-light py-4">
         <div class="container text-center">
-            <div class="fw-bold fs-5 mb-1">Jasa Profesional</div>
+            <div class="fw-bold fs-5 mb-1">JaProf</div>
             <div class="mb-3">
                 Solusi desain & komunikasi profesional untuk UMKM & bisnis berkembang.
             </div>
