--- a/kontak.html
+++ b/kontak.html
@@ -73,7 +73,7 @@
                     <div class="contact-icon text-primary"><i class="fas fa-envelope"></i></div>
                     <div>
                         <div class="fw-semibold">Email</div>
-                        <a href="mailto:jasaprofesional.JAPROF@gmail.com" class="text-decoration-none">jasaprofesional.JAPROF@gmail.com</a>
+                        <a href="mailto:JaProf@gmail.com" class="text-decoration-none">JaProf@gmail.com</a>
                     </div>
                 </div>
                 <div class="d-flex align-items-center mb-3">
