--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 <div class="card text-center border-0 shadow-sm h-100">
                     <img src="logo.png" class="card-img-top mx-auto rounded-circle" alt="Rina" style="width:80px; height:80px; object-fit:cover; margin-top:10px;">
                     <div class="card-body">
-                        <p class="card-text">JasaProfesional mengubah tampilan brand kami jadi jauh lebih profesional.”</p>
+                        <p class="card-text">JaProf mengubah tampilan brand kami jadi jauh lebih profesional.”</p>
                         <strong>- Rina, CEO LokalMaju</strong>
                     </div>
                 </div>
@@ -154,7 +154,7 @@
                 <div class="card text-center border-0 shadow-sm h-100">
                     <img src="logo.png" class="card-img-top mx-auto rounded-circle" alt="Dimas" style="width:80px; height:80px; object-fit:cover; margin-top:10px;">
                     <div class="card-body">
-                        <p class="card-text">“Tim JasaProfesional sangat paham dan responsif. Kami puas!”</p>
+                        <p class="card-text">“Tim JaProf sangat paham dan responsif. Kami puas!”</p>
                         <strong>- Dimas, Founder EduTek</strong>
                     </div>
                 </div>
