--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="container">
         <div class="row align-items-center">
             <div class="col-lg-7 mb-4 mb-lg-0">
-                <h1 class="display-4 fw-bold">Solusi Desain Profesional untuk Bisnis Anda</h1>
+                <h1 class="display-4 fw-bold">Solusi brand Profesional untuk Bisnis Anda</h1>
                 <p class="lead">Bangun identitas brand yang kuat dan tampil menonjol di pasar bersama JaProf.</p>
                
             </div>
@@ -54,7 +54,7 @@
 <!-- LAYANAN -->
 <main class="container my-5">
     <h1 class="text-center mb-3">Layanan Kami</h1>
-    <p class="text-center mb-5">Kami menghadirkan solusi desain menyeluruh untuk membantu bisnis Anda tampil profesional dan berkesan.</p>
+    <p class="text-center mb-5">Kami menghadirkan solusi brand menyeluruh untuk membantu bisnis Anda tampil profesional dan berkesan.</p>
 
     <div class="row g-4 mt-4">
         <div class="col-md-4">
