--- a/tentang.html
+++ b/tentang.html
@@ -51,9 +51,10 @@
                     <div class="card-body">
                         <h2 class="card-title">Visi</h2>
                         <ul class="list-unstyled mb-0">
-                            <li><i class="fa fa-check text-success me-2"></i>Menjadi mitra desain terpercaya</li>
-                            <li><i class="fa fa-check text-success me-2"></i>Memberdayakan bisnis lokal</li>
-                            <li><i class="fa fa-check text-success me-2"></i>Memberikan solusi kreatif dan strategis</li>
+                           <li><i class="fa fa-check text-primary me-2"></i>Menyediakan layanan seperti desain grafis, branding,</li>
+                                                                            <li><i>dan komunikasi visual, yang berkualitas dan terjangkau</i></li>
+                            <li><i class="fa fa-check text-primary me-2"></i>Memahami kebutuhan unik setiap klien</li>
+                            <li><i class="fa fa-check text-primary me-2"></i>Menghadirkan solusi kreatif yang berdampak</li>
                         </ul>
                     </div>
                 </div>
